checkbox filtering functionality, spacing bug fixed by Charlie

--- a/vertical-timeline/css/style.css
+++ b/vertical-timeline/css/style.css
@@ -113,6 +113,7 @@ header h1 {
   position: relative;
   margin: 2em 0;
 }
+
 .cd-timeline-block:after {
   content: "";
   display: table;
@@ -126,7 +127,8 @@ header h1 {
 }
 @media only screen and (min-width: 1170px) {
   .cd-timeline-block {
-    margin: 4em 0;
+    /*margin: 4em 0; */
+    margin: 0 0;
   }
   .cd-timeline-block:first-child {
     margin-top: 0;
